Made changed to Representative.rb, added migration

--- a/app/views/representatives/show.html.haml
+++ b/app/views/representatives/show.html.haml
@@ -12,3 +12,6 @@
                         %tr
                             %td
                                 = @rep.name
+                                = @rep.ocdid
+                                = @rep.party
+                                = @rep.address
