--- a/app/views/news_items/index.html.haml
+++ b/app/views/news_items/index.html.haml
@@ -1,7 +1,7 @@
 .container-fluid.py-5
     .row
         .col-md-8.offset-md-2
-            %h1.text-center Listing News Articles for #{link_to @representative.name, representative_path(id: @representative.id)}
+            %h1.text-center.unique Listing News Articles for #{link_to @representative.name, representative_path(id: @representative.id)}
             .clearfix.my-4
                 .float-right
                     = link_to representative_new_my_news_item_path(@representative), class: 'mx-1 btn btn-primary' do
