--- a/app/views/my_news_items/_form.html.haml
+++ b/app/views/my_news_items/_form.html.haml
@@ -18,5 +18,6 @@
         .col-sm-10
             = select :news_item, :issue, NewsItem.issues_list, { include_blank: true },
             class: 'form-control'
-    .actions
-        = f.submit 'Save', class: 'btn btn-primary'
+    .text-center
+        .actions
+            = f.submit 'Search', class: 'btn btn-primary'
