--- a/app/views/my_news_items/second_page.html.haml
+++ b/app/views/my_news_items/second_page.html.haml
@@ -1,8 +1,10 @@
 .row.mt-2
     .col-12.col-md-6.offset-md-3.col-xl-4.offset-xl-4
         %h1.text-center Edit News Item
-    
+
     .col-12.col-md-6.offset-md-3.col-xl-4.offset-xl-4
         = render 'form_second_page', news_item: @news_item,
         form_url: representative_new_my_news_item_path(@representative),
-        form_method: :post
+        form_method: :post,
+        representative: @representative,
+        issue: @issue
