--- a/app/views/my_news_items/second_page.html.haml
+++ b/app/views/my_news_items/second_page.html.haml
@@ -7,4 +7,5 @@
         form_url: representative_new_my_news_item_path(@representative),
         form_method: :post,
         representative: @representative,
-        issue: @issue
+        issue: @issue,
+        articles: @articles
