--- a/app/views/my_news_items/_form_second_page.html.haml
+++ b/app/views/my_news_items/_form_second_page.html.haml
@@ -11,6 +11,8 @@
             = label :news_item, :representative_id, class: 'col-form-label'
         .col-sm-10
             = link_to representative.name, representative_path(id: representative.id)
+        .col-sm-1
+            = hidden_field :news_item, :representative_id, value: representative.id
     .form-group.row
         .col-sm-2
             = label :news_item, :issue, class: 'col-form-label'
