--- a/app/views/my_news_items/second_page.html.haml
+++ b/app/views/my_news_items/second_page.html.haml
@@ -9,3 +9,10 @@
         representative: @representative,
         issue: @issue,
         articles: @articles
+
+    .col-12.col-md-6.offset-md-3.col-xl-4.offset-xl-4
+        .clearfix
+            .float-right
+                = link_to user_articles_path, class: 'btn btn-info' do
+                    %i.fas.fa-sign-out-alt
+                    View News Articles
