extract codes from my_news_items_controller#second_page to create a new action 'rate', fix the bug that copies are created instead of updating the original article when rating a similar article, add tests to second page

--- a/app/views/user/articles.html.haml
+++ b/app/views/user/articles.html.haml
@@ -1,3 +1,8 @@
+- flash.each do |_type, msg|
+    .alert.alert-info
+        .text-center
+            = msg
+
 .row.mt-2
     .col-12.col-md-6.offset-md-3.col-xl-4.offset-xl-4
         %h3.text-center
