--- a/app/views/my_news_items/_form.html.haml
+++ b/app/views/my_news_items/_form.html.haml
@@ -18,6 +18,8 @@
         .col-sm-10
             = select :news_item, :issue, NewsItem.issues_list, { include_blank: true },
             class: 'form-control'
+        .col-sm-1
+            = hidden_field :news_item, :from_first, value: true
     .text-center
         .actions
             = f.submit 'Search', class: 'btn btn-primary'
